--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
     "react-native-vector-icons": "^10.0.0",
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
     "yup": "^1.2.0"
   },
   "devDependencies": {
