--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "formik": "^2.4.3",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-image-crop-picker": "^0.40.0",
+    "react-native-image-picker": "^5.6.1",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.1",
