--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "formik": "^2.4.3",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-dotenv": "^3.4.9",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.1",
