--- a/package.json
+++ b/package.json
@@ -25,9 +25,7 @@
     "react-native": "0.72.3",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-picker": "^5.6.1",
-
     "react-native-dotenv": "^3.4.9",
-
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.1",
@@ -49,6 +47,7 @@
     "@types/eslint": "^8.44.2",
     "@types/prettier": "^2.7.3",
     "@types/react": "^18.0.24",
+    "@types/react-native-dotenv": "^0.2.0",
     "@types/react-native-vector-icons": "^6.4.13",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
