--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "postinstall": "npx typesync"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^18.3.0",
+    "@react-native-firebase/app": "^18.3.1",
     "@react-native-firebase/auth": "^18.3.0",
+    "@react-native-firebase/firestore": "^18.3.1",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
@@ -20,12 +21,13 @@
     "@react-navigation/native-stack": "^6.9.13",
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
+    "firebase": "^10.3.0",
     "formik": "^2.4.3",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-dotenv": "^3.4.9",
     "react-native-image-crop-picker": "^0.40.0",
     "react-native-image-picker": "^5.6.1",
-    "react-native-dotenv": "^3.4.9",
     "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.1",
