--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "postinstall": "npx typesync"
   },
   "dependencies": {
-    "@react-native-firebase/app": "^18.3.1",
-    "@react-native-firebase/auth": "^18.3.0",
-    "@react-native-firebase/firestore": "^18.3.1",
+    "@react-native-firebase/app": "^18.4.0",
+    "@react-native-firebase/auth": "^18.4.0",
+    "@react-native-firebase/firestore": "^18.4.0",
     "@react-native-google-signin/google-signin": "^10.0.1",
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/material-bottom-tabs": "^6.2.16",
@@ -32,6 +32,7 @@
     "react-native-paper": "^5.9.1",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.0.0",
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
